--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,31 @@
 body {
   text-align: center;
-  background-color: #011F3F;
+  background-color: #011f3f;
 }
 
 #level-title {
-  font-family: 'Press Start 2P', cursive;
+  font-family: "Press Start 2P", cursive;
   font-size: 3rem;
-  margin:  5%;
-  color: #FEF2BF;
+  margin: 5%;
+  color: #fef2bf;
 }
 
 .container {
-  display: block;
-  width: 50%;
+  display: grid;
+  width: fit-content;
   margin: auto;
 
+  grid-template-rows: 125px 125px;
+  grid-template-columns: 125px 125px;
+  column-gap: 15px;
+  row-gap: 15px;
 }
 
 .btn {
-  margin: 25px;
   display: inline-block;
-  height: 200px;
-  width: 200px;
+  box-sizing: border-box;
+  height: 125px;
+  width: 125px;
   border: 10px solid black;
   border-radius: 20%;
 }
@@ -50,4 +54,18 @@ body {
 .pressed {
   box-shadow: 0 0 20px white;
   background-color: grey;
+}
+
+@media (min-width: 500px) {
+  .container {
+    grid-template-rows: 200px 200px;
+    grid-template-columns: 200px 200px;
+    column-gap: 25px;
+    row-gap: 25px;
+  }
+
+  .btn {
+    height: 200px;
+    width: 200px;
+  }
 }
