--- a/css/styles.css
+++ b/css/styles.css
@@ -28,12 +28,17 @@ img {
 .btn-close {
   background-color: red;
   color: white;
-  border: solid 4px black;
-  border-radius: 30px;
-  padding: 10px 20px;
-  text-align: center;
-  font-size: 25px;
+  padding: 2px 12px 5px 12px;
+  border: 5px solid black;
+  border-radius: 6px;
   font-family: 'Press Start 2P', cursive;
+  font-size: 24px;
+  /* position: absolute; */
+
+  justify-self: end;
+  align-self: start;
+  /* right: 16px;
+  top: 16px; */
 }
 
 .intro {
@@ -81,6 +86,12 @@ img {
   top: 50%;
   transform: translateY(-50%);
   position: relative;
+  overflow-y: auto;
+}
+
+.modal-fullscreen {
+  width: 100%;
+  height: 100%;
 }
 
 .modal-rounded {
@@ -144,9 +155,7 @@ img {
   color: #fef2bf;
 }
 
-/* carousel */
-
-/* game */
+/* Game Area */
 
 .container {
   display: grid;
@@ -217,6 +226,7 @@ img {
 }
 
 /* carousel */
+
 .main-container {
   width: 100%;
   height: 100%;
@@ -228,23 +238,34 @@ img {
   padding: 0 15px;
 }
 
+.container-grid {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
 .carousel {
   position: relative;
   height: 100%;
   overflow-x: hidden;
+  flex: 1;
 }
 
 .carousel__slides {
-  height: 90%;
+  width: 100%;
+  /* height: 200px; */
+  overflow-x: hidden;
+  overflow-y: hidden;
   position: relative;
-  transition: transform ease-in 250ms;
+  display: flex;
 }
 
 .carousel__slide {
-  position: absolute;
-  height: 100%;
   width: 100%;
-  display: inline;
+  /* height: 200px; */
+  position: relative;
+  flex: 1 0 auto;
+  transition: margin-left ease-in 250ms;
 }
 
 .carousel__image-container {
@@ -257,11 +278,7 @@ img {
   height: 200px;
   width: 200px;
   object-fit: cover;
-  position: absolute;
-
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  position: relative;
 }
 
 .carousel__button {
